tests/should_fail/match_list_pattern_on_string.nv
module test
// match: list pattern on String type
fn bad(s: String) -> String {
    return match s {
        [a, b] => "two",
        _      => "other"
    }
}
